fixed shifted arrow in categories headers in some scenarios

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -360,5 +360,9 @@
     100% { transform: rotate(360deg); }
 }
 
+.up_pftv_category-name {
+    vertical-align: inherit;
+}
+
 
 
